<resources>
    <string name="app_name">Billy3</string>
    <string name="skip">Skip  </string>
    <string name="image_view">image view</string>
    <string name="website_name">www.gebeyapps.com</string>
    <string name="image_for_on_boarding_screen">image for on boarding screen</string>
    <string name="logo">logo</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="hello_there_welcome_back">HELLO THERE\n WELCOME BACK</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="o">+251</string>
    <string name="postal_code">+251</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="user_account_type">User Account Type</string>
    <string name="select_which_contact_detail_should_we_use_to_reset_you_password">Select which contact detail should we use to reset you password?</string>
    <string name="selection">selection</string>
    <string name="make">make</string>
    <string name="via_sms">via sms:</string>
    <string name="_251965149323">+251965149323</string>
    <string name="meronyikunoamlak1_gmail_com">meronyikunoamlak1@gmail.com</string>
    <string name="via_email">via email:</string>
    <string name="make_selection">make\nselection</string>
    <string name="verification">verification</string>
    <string name="enter_one_time_password_sent_on">Enter the one time password sent on</string>
    <string name="code">code</string>
    <string name="verify_code">verify code</string>
    <string name="profile">Profile</string>
    <string name="receipt">Receipt</string>
    <string name="wallet">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>