<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/img_logo"
        android:transitionName="@string/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_view"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txt_website_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/website_name"
        android:textAlignment="center"
        android:textColor="@color/colorTextSecondary"
        android:textSize="18sp" />
</RelativeLayout>