<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">
    <!--    android:background="@drawable/sign_in_background">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/image_view_of_logo_in_sign_in"
            android:transitionName="@string/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:gravity="end"
            android:text="@string/hello_there_welcome_back"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp" />


        <!--full name label-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_username_in_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:backgroundTint="@color/white"
                android:hint="@string/full_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/input_password_in_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                android:backgroundTint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/link_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/login" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/no_account_yet"
                android:textColor="@color/colorTextPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/link_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/create_one"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>