<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/image_view_of_logo_in_sign_up"
            android:transitionName="@string/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            tools:ignore="RtlHardcoded" />


        <!--  Name Label -->

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:layout_gravity="end"
            android:text="@string/welcome"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/fade"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorTextPrimary">

            <EditText
                android:id="@+id/input_full_name_in_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:background="@color/white"
                android:hint="@string/full_name"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Phone Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/fade">

                <EditText
                    android:id="@+id/postal_code_in_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postal_code"
                    android:enabled="false"
                    android:textColor="@color/colorTextPrimary"
                    android:autofillHints="yes"
                    tools:ignore="LabelFor"
                    android:inputType="none"
                    android:background="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                app:prefixText="9 "
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorTextPrimary"
            >

                <EditText
                    android:id="@+id/input_mobile_number_in_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:textColor="@color/colorTextPrimary"
                    android:autofillHints="yes"
                    android:background="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/fade"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorTextPrimary">

            <EditText
                android:id="@+id/input_email_in_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextPrimary"
                android:autofillHints="yes"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorTextPrimary"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/fade">

            <EditText
                android:id="@+id/input_password_in_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorEnabled="true"
                android:inputType="textPassword"
                android:textColor="@color/colorTextPrimary"
                android:autofillHints="yes"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorTextPrimary"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/fade">

            <EditText
                android:id="@+id/input_confirm_password_in_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextPrimary"
                android:autofillHints="yes"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <!--    cancel button-->
            <Button
                android:id="@+id/btn_cancel_in_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <!-- next Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_in_sign_up"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="12dp"
                android:text="@string/next" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>